apps/base/utils/glance/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glance
spec:
  replicas: 1
  selector:
    matchLabels:
      app: glance
  template:
    metadata:
      labels:
        app: glance
    spec:
      containers:
        - name: glance
          image: glanceapp/glance:v0.8.5
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config-volume
              mountPath: /app/config/glance.yml
              subPath: glance.yaml
      volumes:
        - name: config-volume
          configMap:
            name: glance-config # This must match the name in kustomization.yaml
