apps/base/utils/glance/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glance
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: glance.homelab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: glacne
                port:
                  number: 8080
